@@ -1,8 +1,7 @@
-package com.xhhao.aimodelhub.service;
+package com.xhhao.aimodelhub.service.common;
 
 import com.xhhao.aimodelhub.api.ChatMessage;
 import com.xhhao.aimodelhub.api.ChatModel;
-import com.xhhao.aimodelhub.api.constant.AiModelConstants;
 import lombok.Getter;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -15,13 +14,15 @@ import java.util.List;
 /**
  * 有状态聊天模型实现（自动管理对话历史）
  * <p>
- * 类似 LangChain4j 的 ChatMemory，自动维护对话上下文
+ * 自动维护对话上下文，支持多轮对话
  * </p>
  *
  * @author Handsome
  * @since 1.0.0
  */
 public class StatefulChatModelImpl implements ChatModel {
+
+    private static final int DEFAULT_MAX_HISTORY = 20;
 
     private final ChatModel delegate;
 
@@ -36,7 +37,7 @@ public class StatefulChatModelImpl implements ChatModel {
     /**
      * 最大历史消息数
      */
-    private int maxHistory;
+    private final int maxHistory;
 
     /**
      * 最后活跃时间
@@ -45,82 +46,56 @@ public class StatefulChatModelImpl implements ChatModel {
     private Instant lastActiveTime = Instant.now();
 
     public StatefulChatModelImpl(ChatModel delegate, String systemPrompt) {
-        this(delegate, systemPrompt, AiModelConstants.DEFAULT_MAX_HISTORY);
+        this(delegate, systemPrompt, DEFAULT_MAX_HISTORY);
     }
 
     public StatefulChatModelImpl(ChatModel delegate, String systemPrompt, int maxHistory) {
         this.delegate = delegate;
         this.systemPrompt = systemPrompt;
-        this.maxHistory = maxHistory > 0 ? maxHistory : AiModelConstants.DEFAULT_MAX_HISTORY;
-    }
-
-    /**
-     * 检查会话是否已过期
-     *
-     * @param timeoutMinutes 超时时间（分钟）
-     * @return 是否已过期
-     */
-    public boolean isExpired(long timeoutMinutes) {
-        return Instant.now().isAfter(lastActiveTime.plusSeconds(timeoutMinutes * 60));
+        this.maxHistory = maxHistory > 0 ? maxHistory : DEFAULT_MAX_HISTORY;
     }
 
     @Override
     public Mono<String> chat(String userMessage) {
-        // 更新活跃时间
         lastActiveTime = Instant.now();
-
-        // 1. 构建完整消息列表
         List<ChatMessage> messages = buildMessages(userMessage);
 
-        // 2. 调用底层模型
         return delegate.chat(messages)
             .doOnNext(response -> {
-                // 3. 保存到历史
                 history.add(ChatMessage.user(userMessage));
                 history.add(ChatMessage.assistant(response));
-                // 4. 清理超出限制的历史
                 trimHistory();
             });
     }
 
     @Override
     public Flux<String> chatStream(String userMessage) {
-        // 更新活跃时间
         lastActiveTime = Instant.now();
-
-        // 1. 构建完整消息列表
         List<ChatMessage> messages = buildMessages(userMessage);
-
-        // 2. 先添加用户消息到历史
         history.add(ChatMessage.user(userMessage));
 
-        // 3. 收集完整响应
         StringBuilder fullResponse = new StringBuilder();
 
         return delegate.chatStream(messages)
-            .doOnNext(chunk -> fullResponse.append(chunk))
+            .doOnNext(fullResponse::append)
             .doOnComplete(() -> {
-                // 4. 流式结束后保存 AI 回复
                 history.add(ChatMessage.assistant(fullResponse.toString()));
                 trimHistory();
             })
             .doOnError(e -> {
-                // 出错时移除刚添加的用户消息
                 if (!history.isEmpty()) {
-                    history.remove(history.size() - 1);
+                    history.removeLast();
                 }
             });
     }
 
     @Override
     public Mono<String> chat(List<ChatMessage> messages) {
-        // 直接委托给底层模型（不自动管理历史）
         return delegate.chat(messages);
     }
 
     @Override
     public Flux<String> chatStream(List<ChatMessage> messages) {
-        // 直接委托给底层模型（不自动管理历史）
         return delegate.chatStream(messages);
     }
 
@@ -139,28 +114,15 @@ public class StatefulChatModelImpl implements ChatModel {
     }
 
     /**
-     * 设置最大历史消息数
-     */
-    public void setMaxHistory(int maxMessages) {
-        this.maxHistory = maxMessages;
-        trimHistory();
-    }
-
-    /**
      * 构建完整消息列表（system + history + 当前消息）
      */
     private List<ChatMessage> buildMessages(String userMessage) {
         List<ChatMessage> messages = new ArrayList<>();
 
-        // 1. 添加 system prompt
         if (systemPrompt != null && !systemPrompt.isBlank()) {
             messages.add(ChatMessage.system(systemPrompt));
         }
-
-        // 2. 添加历史消息
         messages.addAll(history);
-
-        // 3. 添加当前用户消息
         messages.add(ChatMessage.user(userMessage));
 
         return messages;
@@ -168,9 +130,6 @@ public class StatefulChatModelImpl implements ChatModel {
 
     /**
      * 清理超出限制的历史消息
-     * <p>
-     * 使用 LinkedList.removeFirst() 效率更高
-     * </p>
      */
     private void trimHistory() {
         while (history.size() > maxHistory) {
